Login - GREEN | Michal Martyna

--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -1,5 +1,8 @@
 {% extends '::base.html.twig' %}
 
+{% block login_logout_panel %}
+{% endblock login_logout_panel %}
+
 {% block title %}
     The page does not exists!
 {% endblock title %}
@@ -7,4 +10,3 @@
 {% block body %}
     <h2>The page does not exists!</h2>
 {% endblock body %}
-
